<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/imagebackground"
    tools:context="br.com.listaclientes.listaclientes.LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_below="@+id/tvLogin"
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"/>

    <TextView
        android:layout_below="@+id/etLogin"
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_senha"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_below="@+id/tvSenha"
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/checkManterConectador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_manter_conectado" />

    <Button
        android:layout_below="@+id/etSenha"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logar"
        android:text="@string/botao_login"
        android:background="@drawable/botoes"
        android:textColor="@color/colorButton"
        android:textSize="@dimen/botao_tamanho_texto"
        android:layout_marginTop="@dimen/button_margin"/>

    <Button
        android:layout_below="@+id/button"
        android:id="@+id/btnNovoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="novoCadastro"
        android:text="@string/botao_cadastrar"
        android:background="@drawable/botoes"
        android:textColor="@color/colorButton"
        android:textSize="@dimen/botao_tamanho_texto"
        android:layout_marginTop="@dimen/button_margin"/>

</LinearLayout>